--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^6.0.1",
+    "@hoozi/panel": "^1.0.1-beta.4",
     "ant-design-vue": "^2.0.1",
     "core-js": "^3.6.5",
     "lodash": "^4.17.21",
